Fix z-index of updates bubble.
The updates bubble didn't have a z-index set, which could make it appear under
other elements. This wasn't immediately obvious before because it is the last
element in the body, so it did appear on top of most things.

Testing done:
Set up things to get an updates bubble, and then verified that it no longer
displayed behind file attachment captions.

Reviewed at https://reviews.reviewboard.org/r/7569/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -1662,6 +1662,7 @@
   padding: 1em;
   position: fixed;
   right: 0;
+  z-index: @z-index-page-overlay;
 
   a, a:visited {
     color: #0000CC;
